Positioned logo to centre and added text box to centre

--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 
+<link rel="Stylesheet" href="style.css">
+
 <body>
-   <div id="hplogo">
-       <img alt="Google" src="/home/synthrr/the_odin_project/google-homepage/googlelogo_color_272x92dp.png">
-   </div> 
+    <center>
+        <div id="lga">
+            <div id="hplogo">
+                <img alt="Google" src="/home/synthrr/the_odin_project/google-homepage/googlelogo_color_272x92dp.png">
+            </div>
+        </div>
+    </center>
+
+    <div id="searchform">
+        <form id="sb">
+            <div id="sbb">
+                <input class="sbti" maxlength="2048" type="text" title="search" value="" aria-label="Search">
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
