Learning more positioning

--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 
 <link rel="Stylesheet" href="style.css">
 
-<body>
-    <center>
-        <div id="lga">
-            <div id="hplogo">
-                <img alt="Google" src="/home/synthrr/the_odin_project/google-homepage/googlelogo_color_272x92dp.png">
+<body id="hp">
+
+    <div id="main" class="content">
+        <center>
+            <div id="lga">
+                <div id="hplogo">
+                    <img alt="Google" src="/home/synthrr/the_odin_project/google-homepage/googlelogo_color_272x92dp.png">
+                </div>
             </div>
-        </div>
-    </center>
+        </center>
+    </div>
 
     <div id="searchform">
-        <form id="sb">
+        <form id="sb" action="search">
             <div id="sbb">
                 <input class="sbti" maxlength="2048" type="text" title="search" value="" aria-label="Search">
             </div>
