adding navigation to top, fixed logo centering

--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 
-<link rel="Stylesheet" href="style.css">
+<html lang="en">
+
+<head>
+    <title>Google</title>
+    <link rel="Stylesheet" href="style.css">
+</head>
 
 <body id="hp">
 
+    <nav>
+        <ul id="left-menu" class="upper">
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Store</a>
+            </li>
+        </ul>
+
+        <ul id="right-menu" class="upper">
+            <li>
+                <a href="#">Gmail</a>
+            </li>
+            <li>
+                <a href="#">Images</a>
+            </li>
+            <li>
+                <a href="#">Apps</a>
+            </li>
+            <li>
+                <button id="sign_in">
+                    <a href="#">Sign In</a>
+                </button>
+            </li>
+        </ul>
+    </nav>
+
     <div id="main" class="content">
-        <center>
-            <div id="lga">
-                <div id="hplogo">
-                    <img alt="Google" src="/home/synthrr/the_odin_project/google-homepage/googlelogo_color_272x92dp.png">
-                </div>
-            </div>
-        </center>
+        <div id="hplogo">
+            <img id="glogo" alt="Google" src="/home/synthrr/the_odin_project/google-homepage/googlelogo_color_272x92dp.png">
+        </div> 
     </div>
 
     <div id="searchform">
@@ -22,5 +51,9 @@
         </form>
     </div>
 </body>
+
+<footer>
+
+</footer>
 
 </html>
