Finalised the google homepage recreation to almost perfection.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
             <img id="glogo" alt="Google" src="/home/synthrr/the_odin_project/google-homepage/images/googlelogo_color_272x92dp.png">
             <br>
         </div> 
-        <div id="searchbox">
-            <form id="sb" action="search"> 
-                <input class="sbti" maxlength="2048" type="text" title="search" value="" aria-label="Search">
-            </form>
+        <div id="search-box">
+            <img id="search-icon" src="/home/synthrr/the_odin_project/google-homepage/images/baseline_search_black_18dp.png">
+            <input id="sbti" maxlength="2048" type="text" title="search" value="" aria-label="Search">
         </div>
         <div id="button-area">
             <button class="buttons" type="button">Google Search</button>
@@ -53,8 +52,35 @@
         </div>
     </div>
     <div id="bottom-nav">
-        <div id="upper-bottom"></div>
-        <div id="lower-bottom"></div>
+        <div id="upper-bottom">
+            <p>Australia</p>
+        </div>
+        <div id="lower-bottom">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Advertising</a>
+                    </li>
+                    <li>
+                        <a href="#">Business</a>
+                    </li>
+                    <li>
+                        <a href="#">How Search Works</a>
+                    </li>
+                </ul>
+                <ul id="lower-right">
+                    <li>
+                        <a href="#">Privacy</a>
+                    </li>
+                    <li>
+                        <a href="#">Terms</a>
+                    </li>
+                    <li>
+                        <a href="#">Settings</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </body>
 
