Added hover availability to apps icon on search page.

--- a/search.html
+++ b/search.html
@@ -47,17 +47,11 @@
             </li>
         </ul>
 
-        <ul id="search-right-navbar" class="navsetting">
+        <ul id="right-navbar" class="navsetting">
             <li>
-                <a href="#">Gmail</a>
-            </li>
-            <li>
-                <a href="#">Images</a>
-            </li>
-            <li>
-              <a href="#">
-		<img id="apps-icon" src="images/baseline_apps_black_48dp.png">
-	      </a>
+                <a class="appsicon2" href="#">
+                    <img id="apps-icon" class="searchappsimg" src="images/baseline_apps_black_48dp.png" viewBox=>
+	            </a>
             </li>
             <li>
                 <button id="sign_in">Sign In</button>
