--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
     <link rel="Stylesheet" href="style.css">
 </head>
 
-<body id="searchpage">
+<body>
 
     <nav>
         <div id="uppersearch">
@@ -280,34 +280,26 @@
 <footer>
     <div id="bottom-nav">
         <div id="upper-bottom">
-            <p>Australia</p>
+            <span id="location-cnt">Australia</span>
+            <div id="location-details">
+                <span id="location-dot"></span>
+                <span id="location-specific">Bentley, Western Australia</span>
+                <span class="location-sep">-</span>
+                <span id="location-bckgrd">From your Internet address</span>
+                <span class="location-sep">-</span>
+                <span id="location-extra">Use precise location</span>
+                <span class="location-sep">-</span>
+                <a href="/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjBteziqqXnAhVv7HMBHQdmC1MQty56BAgREEU&amp;url=https%3A%2F%2Fsupport.google.com%2Fwebsearch%3Fp%3Dws_settings_location%26hl%3Den-AU&amp;usg=AOvVaw3g3Z-B1NrTtQ34fgnApBQ4">Learn More</a>
+            </div>
         </div>
         
         <div id="lower-bottom">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">Advertising</a>
-                    </li>
-                    <li>
-                        <a href="#">Business</a>
-                    </li>
-                    <li>
-                        <a href="#">How Search Works</a>
-                    </li>
-                </ul>
-                <ul id="lower-right">
-                    <li>
-                        <a href="#">Privacy</a>
-                    </li>
-                    <li>
-                        <a href="#">Terms</a>
-                    </li>
-                    <li>
-                        <a href="#">Settings</a>
-                    </li>
-                </ul>
-            </nav>
+            <span id="lower-left">
+                <a href="#">Help</a>
+                <a href="#">Send feedback</a>
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+            </span>
         </div>
     </div>
 </footer>
